[tool.poetry]
name = "nevaX"
version = "0.1.1"
description = "NeVA: NVIDIA's Visual Question Answering Transformer"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "Attribution-NonCommercial 4.0 International"
readme = "README.md"
homepage = "https://github.com/kyegomez/neva"
repository = "https://github.com/kyegomez/neva"

[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
transformers = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
